Remove Qwertee Title and fix alignment in uptime monitor component

--- a/resources/assets/sass/components/_qwertee.scss
+++ b/resources/assets/sass/components/_qwertee.scss
@@ -1,5 +1,5 @@
 .img-fullheight {
-  max-height:220px;
+  max-height:260px;
   margin:0 auto;
 }
 
