--- a/resources/assets/sass/components/_uptime-robot.scss
+++ b/resources/assets/sass/components/_uptime-robot.scss
@@ -1,6 +1,8 @@
 .uptime-robot {
 
-  text-align: center;
+  .uptime-robot__content {
+    text-align: center;
+  }
 
   .doughnut {
     position: relative;
